--- a/style.css
+++ b/style.css
@@ -3,3 +3,49 @@ body {
   height: 100%;
   margin: 0;
 }
+header{
+  text-align: center;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 800px;
+  background-color: aqua;
+}
+h1 {
+  color: red;
+}
+#details {
+  color: blue;
+}
+h3{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: black;
+}
+#featured-property img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+#featured-property p {
+  width: 800px; ;
+  text-align: center;
+  margin: auto;
+}
+#featured-property figcaption{
+  text-align: center;
+  text-size-adjust: 80px;
+}
+#details {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  background-color: red;
+  
+}
+
+#details > div {
+  flex: 1;
+  max-width: 300px;
+  margin-right: 20px;
+  
+}
